--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,10 @@ dependencies:
   footer: ^0.0.4
   font_awesome_flutter: ^10.2.1
   url_launcher: ^6.1.5
+  image_picker: ^0.8.5+3
+  full_screen_image_null_safe: ^2.0.0
+  easy_image_viewer: ^1.1.0
+  back_button_interceptor: ^6.0.2
 
 dev_dependencies:
   flutter_test:
@@ -69,7 +73,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/mlog.png
+    - assets/glogo.png
     - assets/logo.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
